# vonbot

./: .env.example  .gitignore  .sourcery.yaml  CURRICULUM_README.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED.md  WARP.md  app.py  curriculum_canonical_requirements_majors_1-6.csv  curriculum_requirements.csv  curriculum_requirements2.csv  fall2025.csv  freetds.conf  inspection_output.txt  main.py  potential_class_takers.sql  pre-requisites.csv  pyproject.toml  requirements.txt  test_course_query.sql
.github/: copilot-instructions.md
database/: connection.py  local_db.py
logic/: cache.py  course_matching.py  optimization.py  prerequisites.py  student_selection.py
models/: data_models.py
scripts/: match_requirements.py
services/: email_service.py  telegram_bot.py
services/legacy-adapter/: .env.example  .gitignore  AUDIT.md  BUILD_SUMMARY.md  Dockerfile  GETTING_STARTED.md  INTEGRATION.md  LEGACY_SCHEMA.md  MSSQL_2012_CONNECTION.md  Makefile  QUICK_START.md  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.vps.yml  freetds.conf  inspect_schema.py  pytest.ini  requirements-dev.txt  requirements.txt
services/legacy-adapter/app/: __init__.py  audit.py  config.py  database.py  main.py  mappers.py  models.py
services/legacy-adapter/scripts/: deploy-vps.sh  lockdown-mssql.ps1  monitor.sh  test-api.sh  test-local.sh
services/legacy-adapter/tests/: conftest.py  test_api_endpoints.py  test_audit.py  (+1 more)
tests/: diagnose_connection.py  inspect_students.py  inspect_terms_view.py  test_course_history.py  test_db_real.py  test_imports.py  test_prerequisites.py
